@@ -49,7 +49,7 @@ case "${1}" in
 
       # Start the udev daemon to continually watch for, and act on,
       # uevents
-      /sbin/udevd --daemon
+      /lib/udev/udevd --daemon
 
       # Now traverse /sys in order to "coldplug" devices that have
       # already been discovered
