@@ -38,6 +38,18 @@
 -->
 
     <listitem>
+      <para>2012-01-22</para>
+      <itemizedlist>
+        <listitem>
+          <para>[matthew] - Upgrade to Udev-178, including adding its new
+          depdendency, Kmod-4. Fixes
+          <ulink url="&lfs-ticket-root;2998">#2998</ulink> and
+          <ulink url="&lfs-ticket-root;3001">#3001</ulink>.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2012-01-16</para>
       <itemizedlist>
         <listitem>
