@@ -113,6 +113,9 @@
       <para>Kbd &kbd-version;</para>
     </listitem>-->
     <!--<listitem>
+      <para>Kmod &kmod-version;</para>
+    </listitem>-->
+    <!--<listitem>
       <para>Less &less-version;</para>
     </listitem>-->
     <!--<listitem>
@@ -190,9 +193,9 @@
     <!--<listitem>
       <para>Texinfo &texinfo-version;</para>
     </listitem>-->
-    <!--<listitem>
+    <listitem>
       <para>Udev &udev-version;</para>
-    </listitem>-->
+    </listitem>
     <!--<listitem>
       <para>&udev-config;</para>
     </listitem>-->
@@ -221,6 +224,10 @@
 
   <itemizedlist>
     <title>Added:</title>
+
+    <listitem>
+      <para>Kmod-&kmod-version;</para>
+    </listitem>
 
     <listitem>
       <para>&mpfr-fixes-patch;</para>
