@@ -1,5 +1,5 @@
-<!ENTITY version "SVN-20120116">
-<!ENTITY releasedate "Jan 16, 2012">
+<!ENTITY version "SVN-20120122">
+<!ENTITY releasedate "Jan 22, 2012">
 <!ENTITY copyrightdate "1999-2012"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone "7.1">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
