@@ -289,6 +289,14 @@
 <!ENTITY kbd-ch6-du "16.0 MB">
 <!ENTITY kbd-ch6-sbu "less than 0.1 SBU">
 
+<!ENTITY kmod-version "4">
+<!ENTITY kmod-size "318 KB">
+<!ENTITY kmod-url "http://packages.profusion.mobi/kmod/kmod-&kmod-version;.tar.xz">
+<!ENTITY kmod-md5 "e14450a066a48accd0af1995b3c0232d">
+<!ENTITY kmod-home " ">
+<!ENTITY kmod-ch6-du "16.0 MB">
+<!ENTITY kmod-ch6-sbu "less than 0.1 SBU">
+
 <!ENTITY less-version "444">
 <!ENTITY less-size "301 KB">
 <!ENTITY less-url "http://www.greenwoodsoftware.com/less/less-&less-version;.tar.gz">
@@ -297,7 +305,7 @@
 <!ENTITY less-ch6-du "3.5 MB">
 <!ENTITY less-ch6-sbu "less than 0.1 SBU">
 
-<!ENTITY lfs-bootscripts-version "20120116">                 <!-- Scripts depend on this format -->
+<!ENTITY lfs-bootscripts-version "20120122">                 <!-- Scripts depend on this format -->
 <!ENTITY lfs-bootscripts-size "BOOTSCRIPTS-SIZE KB">         <!-- Updated in Makefile -->
 <!ENTITY lfs-bootscripts-url "&downloads-root;lfs-bootscripts-&lfs-bootscripts-version;.tar.bz2">
 <!ENTITY lfs-bootscripts-md5 "BOOTSCRIPTS-MD5SUM">           <!-- Updated in Makefile -->
@@ -519,18 +527,13 @@
 <!ENTITY texinfo-ch6-du "21 MB">
 <!ENTITY texinfo-ch6-sbu "0.3 SBU">
 
-<!ENTITY udev-version "173">
-<!ENTITY udev-size "594 KB">
-<!ENTITY udev-url "&anduin-sources;udev/udev-&udev-version;.tar.bz2">
-<!ENTITY udev-md5 "91a88a359b60bbd074b024883cc0dbde">
+<!ENTITY udev-version "178">
+<!ENTITY udev-size "676 KB">
+<!ENTITY udev-url "&kernel;linux/utils/kernel/udev-&udev-version;.tar.xz">
+<!ENTITY udev-md5 "173cc6061e3a82dd6e9a1a5cf767a858">
 <!ENTITY udev-home "&kernel;linux/utils/kernel/hotplug/udev.html">
 <!ENTITY udev-ch6-du "9.3 MB">
 <!ENTITY udev-ch6-sbu "0.2 SBU">
-
-<!ENTITY udev-testfiles-url "http://anduin.linuxfromscratch.org/sources/other/udev-&udev-version;-testfiles.tar.bz2">
-<!ENTITY udev-testfiles-size "152 KB">
-<!ENTITY udev-testfiles-md5 "d97f80f6a70cd97f0519b14f15e3e195">
-<!ENTITY udev-testfiles-du "37 MB">
 
 <!ENTITY udev-config "udev-config-20100128"> <!-- Scripts depend on this format -->
 <!ENTITY udev-config-size "UDEV-SIZE KB">    <!-- Updated in Makefile -->
