@@ -1,3 +1,8 @@
+2012-01-22  Matt Burgess <matthew@linuxfromscratch.org>
+
+   * lfs/init.d/udev: Change udevd path following upstream changes to its
+                      location
+
 2011-12-23  Matt Burgess <matthew@linuxfromscratch.org>
 
    * lfs/init.d/mountvirtfs: Correct permissions on /run/shm
